# turjmp

./: .dockerignore  .gitignore  .golangci.yml  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  go.mod  go.sum
.sisyphus/plans/: phase-f3-rdp-mitm.md
cmd/turjmp/: main.go
configs/: config.dev.yaml  config.docker.yaml  config.prod.yaml
deployments/: docker-compose.native-rdp.yaml  docker-compose.yaml
doc/: native-rdp-mitm-acceptance.md  native-rdp-mitm-runbook.md  rdp-public-access-design-notes.md
internal/api/: phase1_test.go  router.go
internal/auth/: jwt.go  password.go  totp.go
internal/config/: config.go  config_test.go
internal/crypto/: secret.go
internal/domain/: errors.go  models.go
internal/health/: health.go
internal/logging/: logger.go
internal/rbac/: adapter.go  model.conf  rbac.go
internal/recorder/: cast.go  cast_test.go  storage.go  storage_test.go
internal/repository/: bootstrap.go  db.go  store.go
internal/server/: lifecycle.go  server.go
internal/service/: assets.go  auth.go  host_keys.go  host_keys_test.go  permissions.go  phase1_test.go  rdp_native.go  rdp_proxy_credentials.go  sdk.go  sessions.go  settings.go  settings_policy.go  tokens.go  tokens_test.go  users.go
migrations/postgres/: 00001_core.sql  00002_rdp_proxy_credentials.sql
migrations/sqlite/: 00001_core.sql  (+1 more)
native/rdp-freerdp-plugin/: CMakeLists.txt  turjmp_plugin.c
scripts/: codex_audit_loop.sh
web/: eslint.config.js  go.mod  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
(+110 files in other folders)
